tests/ui/diagnostic_namespace/do_not_recommend/as_expression.next.stderr
error[E0277]: the trait bound `&str: AsExpression<Integer>` is not satisfied
  --> $DIR/as_expression.rs:56:21
   |
LL |     SelectInt.check("bar");
   |               ----- ^^^^^ the trait `AsExpression<Integer>` is not implemented for `&str`
   |               |
   |               required by a bound introduced by this call
   |
help: the trait `AsExpression<Integer>` is not implemented for `&str`
      but trait `AsExpression<Text>` is implemented for it
  --> $DIR/as_expression.rs:40:1
   |
LL | impl AsExpression<Text> for &'_ str {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: for that trait implementation, expected `Text`, found `Integer`
note: required by a bound in `Foo::check`
  --> $DIR/as_expression.rs:47:12
   |
LL |     fn check<T>(&self, _: T) -> <T as AsExpression<<Self as Expression>::SqlType>>::Expression
   |        ----- required by a bound in this associated function
LL |     where
LL |         T: AsExpression<Self::SqlType>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Foo::check`

error[E0277]: the trait bound `X: A` is not satisfied
  --> $DIR/as_expression.rs:60:15
   |
LL |     X.start().foo().finish();
   |               ^^^ unsatisfied trait bound
   |
help: the trait `A` is not implemented for `X`
  --> $DIR/as_expression.rs:70:1
   |
LL | struct X;
   | ^^^^^^^^
note: required by a bound in `Ext::foo`
  --> $DIR/as_expression.rs:79:23
   |
LL |     fn foo(self) -> Self
   |        --- required by a bound in this associated function
LL |     where
LL |         Self: Sized + A;
   |                       ^ required by this bound in `Ext::foo`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
